# simd-hacks

./: .gitignore  .travis.yml  Cargo.toml  README.md  deploy-docs.sh  search-index.js
benches/: sum-vector.rs
generator/: Cargo.toml
generator/src/: conversions.rs  macros.rs  main.rs  maths.rs  src.rs  ty.rs
implementors/core/clone/: trait.Clone.js
simd/: fn.rsqrt.html  fn.sqrt.html  index.html  sidebar-items.js  struct.Tails.html  struct.TailsMut.html  trait.Bitcast.html  trait.Convert.html  trait.DoubleVector.html  trait.HalfVector.html  trait.Vector.html
simd/convert/: sidebar-items.js
simd/maths/: index.html  sidebar-items.js
simdty/: struct.f32x16.html  struct.f32x2.html  struct.f32x32.html  struct.f32x4.html  struct.f32x64.html  struct.f32x8.html  struct.f64x16.html  struct.f64x2.html  struct.f64x32.html  struct.f64x4.html  struct.f64x64.html  struct.f64x8.html  struct.i16x16.html  struct.i16x2.html  struct.i16x32.html  struct.i16x4.html  struct.i16x64.html  struct.i16x8.html  struct.i32x16.html  struct.i32x2.html  struct.i32x32.html  struct.i32x4.html  struct.i32x64.html  struct.i32x8.html  struct.i64x16.html  struct.i64x2.html  struct.i64x32.html  struct.i64x4.html  struct.i64x64.html  struct.i64x8.html  struct.i8x16.html  struct.i8x2.html  struct.i8x32.html  struct.i8x4.html  struct.i8x64.html  struct.i8x8.html  struct.u16x16.html  struct.u16x2.html  struct.u16x32.html  struct.u16x4.html  (+20 more)
src/: lib.rs
src/convert/: bitcast.rs  mod.rs  semantic.rs
src/maths/: mod.rs  sqrt.rs
src/simd/: lib.rs.html
tests/: basic.rs  conversions.rs  sqrt.rs
(+16 files in other folders)
